--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
           uses: anchore/scan-action@v3
           with:
               image: "juice-shop:${{github.sha}}"
+              fail-build: false
         - name: Generate SBOM
           uses: anchore/sbom-action@v0
           with:
